# ShiboScript

./: .gitignore  BLOG_PLATFORM_README.md  COMPLETE_DOCUMENTATION.md  EXECUTION_SUMMARY.md  INSTALL.md  LICENSE  Makefile  QUICK_REFERENCE.md  README.md  WEB_DEVELOPMENT_ENHANCEMENTS.md  advanced_shiboscript.py  blog_admin.shibo  blog_demo.html  blog_platform.shibo  doc.txt  hello.sp  hello_world.shibo  install_linux.sh  install_windows.bat  m.shibo  main.py  mm.shibo  pyproject.toml  requirements.txt  run_linux.sh  run_shiboscript.py  run_windows.bat  setup.py  shiboc  shiboscript.py  tasks.json  test_advanced.shibo  test_errors.shibo  ultimate_demo.shibo  utils.shibo  web_scraper_demo.shibo  web_server_demo.shibo
backup/: r.shibo
documentation/: README.md  SUMMARY.md  index.html
documentation/api_docs/: BUILTIN_FUNCTIONS.md
documentation/examples/: web_api.shibo  web_framework.shibo  working_demo.shibo
documentation/reference_guides/: BEST_PRACTICES.md  LANGUAGE_SYNTAX.md
documentation/tutorials/: beginner_guide.md
examples/: calculator.shibo  class.shibo  classes.shibo  data_analyzer.shibo  final_demo.shibo  hello.shibo  web_scraper.shibo  xss.shibo
organized_project/: README.md
organized_project/core/: setup.py  simple_advanced_shiboscript.py  test_advanced.py
organized_project/docs/: ADVANCED_FEATURES.md  ENTERPRISE_FEATURES.md  LEARNING_EXERCISES.md  PROJECT_STRUCTURE.md  README.md  REAL_WORLD_PROJECTS_SUMMARY.md  SUMMARY.md  ULTIMATE_ENTERPRISE_GUIDE.md
organized_project/examples/: advanced_features_demo.shibo  api_server_demo.shibo  enterprise_demo.shibo  generate_sample_content.shibo  launch_blog.shibo  test_advanced_simple.shibo  test_async.shibo  test_database.shibo
organized_project/examples/examples_original/: all_projects_demo.shibo  file_organizer.shibo  system_monitor.shibo
organized_project/legacy/: urls.txt
project/: task.shibo
pypi_upload/: AUTHORS.md  CODE_OF_CONDUCT.md  FEATURES_PYPI_READY.md  HISTORY.md  MANIFEST.in  PYPI_DESCRIPTION.md  PYPI_UPLOAD_CHECKLIST.md  SECURITY.md  pyproject.toml  setup.cfg  setup.py  tox.ini  upload_to_pypi.bat  upload_to_pypi.sh
pypi_upload/.github/workflows/: publish.yml  test.yml
pypi_upload/examples/: README.md  web_development_demo.shibo  web_scraper_advanced.shibo
pypi_upload/src/shiboscript/: __init__.py
pypi_upload/tests/unit/: test_basic.py
shiboscript_project/: .gitignore  CONTRIBUTING.md  Makefile  README.md  setup.py
shiboscript_project/docs/: DEVELOPMENT_GUIDE.md
shiboscript_project/examples/: Brute-Forcer.shibo  all_examples_demo.shibo  comprehensive_demo.shibo  np.shibo  password_manager.shibo  task_manager.shibo
shiboscript_project/shiboscript-env/: pyvenv.cfg
shiboscript_project/src/: __init__.py
shiboscript_project/src/cli/: __init__.py
src/: __init__.py
src/cli/: __init__.py
src/shiboscript/: __init__.py  compiler.py  core.py
static/: admin.css  style.css
