[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "shiboscript"
version = "1.0.0"
authors = [
    {name = "Shiboscript Team", email = "shiboscript@example.com"},
]
description = "A Python-like scripting language with advanced features"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "Pillow>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=21.0",
    "flake8>=3.8",
]

[project.scripts]
shiboc = "shiboscript.compiler:main"
shiboscript = "shiboscript.core:repl"

[project.urls]
Homepage = "https://github.com/shiboscript/shiboscript"
Repository = "https://github.com/shiboscript/shiboscript"
"Bug Tracker" = "https://github.com/shiboscript/shiboscript/issues"

[tool.setuptools.packages.find]
where = ["src"]