[metadata]
description-file = README.md

[bdist_wheel]
universal = 1

[options]
packages = find:
include_package_data = True
python_requires = >=3.8

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    shiboscript = shiboscript.cli:main
    shibo = shiboscript.cli:main

[tool:pytest]
testpaths = tests
addopts = 
    --strict-markers
    --strict-config
    -ra
    --tb=short

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True

[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude = 
    .git,
    __pycache__,
    .venv,
    venv,
    build,
    dist,
    *.egg-info

[black]
line-length = 88
skip-string-normalization = true
target-version = ['py38']
